--- a/Product Landing Page/styles.css
+++ b/Product Landing Page/styles.css
@@ -86,7 +86,11 @@ h2 {
     margin: 0 auto;
     width: 100%;
 }
+.grid {
+    display: block;
+}
 #features {
+    display: inline;
     margin-top: 30px;
 }
 #features .icon {
@@ -106,13 +110,16 @@ h2 {
     padding: 5px;
 }
 #how-it-works {
-    margin-top: 50px;
+    margin: 50px 0;
     display: flex;
     justify-content: center;
 }
+#how-it-works iframe {
+    width: 100%;
+    max-width: 560px;
+}
 #pricing {
     display: flex;
-    flex-direction: row;
     justify-content: center;
 }
 .product {
@@ -189,8 +196,8 @@ footer span {
         margin: 0;
         padding: 0;
     }
-    .logo {
-        width: 100vw;
+    .logo img {
+        width: 100%;
     }
     #pricing {
     flex-direction: column;
